Jsoneystring settings (#318)